--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DataVision | Visualización, Automatización y Desarrollo</title>
+  <title>RockData | Visualización, Automatización y Desarrollo</title>
+  <link rel="icon" href="/icon.png"/>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -12,7 +13,7 @@
   <!-- NAVBAR -->
   <header class="bg-white shadow fixed w-full z-50">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-indigo-600">DataVision</h1>
+      <h1 class="text-2xl font-bold text-indigo-600">RockData</h1>
       <nav class="space-x-6 hidden md:flex">
         <a href="#servicios" class="hover:text-indigo-600">Servicios</a>
         <a href="#proyectos" class="hover:text-indigo-600">Proyectos</a>
@@ -95,14 +96,14 @@
   <section id="contacto" class="py-20 text-center">
     <h3 class="text-3xl font-bold mb-6">¿Listo para empezar?</h3>
     <p class="text-lg mb-8">Conversemos sobre cómo podemos ayudarte a potenciar tu negocio con tecnología.</p>
-    <a href="https://wa.me/521XXXXXXXXXX" target="_blank" class="bg-indigo-600 text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-indigo-700 transition">
+    <a href="https://wa.me/send?phone=5215653970517&text=¿Hola%2C%20me%20podrían%20brindar%20mayor%20información%3F..." target="_blank" class="bg-indigo-600 text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-indigo-700 transition">
       💬 Contáctanos por WhatsApp
     </a>
   </section>
 
   <!-- FOOTER -->
   <footer class="bg-gray-900 text-gray-300 py-6 text-center">
-    <p>© 2025 DataVision. Todos los derechos reservados.</p>
+    <p>© 2025 RockData. Todos los derechos reservados.</p>
   </footer>
 
 </body>
