--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RockData | Visualización, Automatización y Desarrollo</title>
-  <link rel="icon" href="/icon.png"/>
+  <link rel="icon" href="icon.png"/>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
